couple of edits

--- a/papers/lime_diagnostics/visual-diagnostics-of-a-model-explainer.Rnw
+++ b/papers/lime_diagnostics/visual-diagnostics-of-a-model-explainer.Rnw
@@ -23,7 +23,7 @@
 \begin{document}
 
 % R code chunk options
-\SweaveOpts{concordance = TRUE, echo = FALSE}
+%\SweaveOpts{concordance = TRUE, echo = FALSE}
 
 % Paper header (title and authors)
 \title{Visual Diagnostics of a Model Explainer -- Tools for the Assessment of LIME Explanations}
@@ -60,7 +60,8 @@ To check on when editing writing:
 
 \kg{*** I added some subsections to the introduction, because it was getting so long. What do you think? Would it be better to make the introduction shorter and move the details to a separate section?}
 
-In the field of statistics, there are two main uses for models: inference and prediction. Machine learning models are often used for the latter purpose. While these models have been proven to perform well in a wide range of prediction problems, their accuracy comes at the cost of interpretability. They are often complex algorithms that are good at identifying patterns in the data but lack a functional form \kg{*** Is it okay for me to make this statement about the functional form?}, so it not possible to directly interpret them. As a result, they produce predictions that lack an explanation, which has earned them the reputation of being ``black-box models".
+In the field of statistics, there are two main uses for models: inference and prediction. Machine learning models are often used for the latter purpose. While these models have been proven to perform well in a wide range of prediction problems, their accuracy comes at the cost of interpretability. They are often complex algorithms that are good at identifying patterns in the data but \hh{often} lack a functional form, \hh{making it impossible} to directly interpret them. As a result, they \hh{HH: who is they - make that explicit. always.} produce predictions that lack an explanation, which has earned them the reputation of being ``black-box models". 
+\hh{HH: I would make the claim that the need for explanations goes even deeper. Even if a functional form exists, such as in a linear model, there are situations where the model gets complicated enough to be not or not easily interpretable. Only very good natured three-way interactions in a logistic regression are interpretable. For the other ones more work is needed than most audiences would be capable of. Explainer models can be used in those situations as well.}
 
 \subsection{The Importance of Explanability}
 
@@ -76,23 +77,26 @@ The European Union has taken the desire to provide explanations for machine lear
 
 As a result of the movement to produce explainable predictions, an area of research has emerged focusing on developing ways to explain output from machine learning algorithms. One approach that is being taken is to develop model explainers that provide insight into the performance of the complex model (reference). A model explainer is a method that is separate from the model but uses the model and output from the model to shed light on the process that the model goes through to produce predictions. LIME (local interpretable model-agnostic explanations) is one such model explainer \citep{ribeiro:2016}.
 
-While some model explainers are focused on understanding a model at the global level, LIME is designed provide a local explanations by focusing on a single prediction of interest. Additionally, LIME was designed to work with any model and to produce easily understandable explanations. \citep{ribeiro:2016} \hh{XXX a citation might be good here for local and agnostic} \kg{Is it okay to include the same reference to the original LIME paper again?} Conceptually, LIME fits a simple interpretable model, referred to as the explainer, that is meant to capture the behavior of the complex ``black-box model" in a local region around a prediction of interest. The interpretation of the simple model is then used to explain the variables that most influenced the prediction made by the complex model. 
+While some model explainers are focused on understanding a model at the global level, LIME is designed provide a local explanations by focusing on a single prediction of interest. Additionally, LIME was designed to work with any model and to produce easily understandable explanations. \citep{ribeiro:2016} \hh{XXX a citation might be good here for local and agnostic} \kg{Is it okay to include the same reference to the original LIME paper again?} \hh{sure} Conceptually, LIME fits a simple interpretable model, referred to as the explainer, that is meant to capture the behavior of the complex ``black-box model" in a local region around a prediction of interest. The interpretation of the simple model is then used to explain the variables that most influenced the prediction made by the complex model. 
 
 \begin{figure}[t!]
 \begin{center}
 \includegraphics[width=3.25in]{figures/lime_concept.png}
-\caption{Conceptual depiction of LIME. The black lines represent a weighted linear regression model being used as the explainer model for a hypothetical black-box model fit with two features. The explainer model suggests that Feature 1 is driving the prediction made by the black-box model for the case of interest since it has captured the slope in the local region around the prediction of interest.}
+\caption{Conceptual depiction of LIME. The black lines represent a weighted linear regression model being used as the explainer model for a hypothetical black-box model fit with two features.  The explainer model suggests that Feature 1 is driving the prediction made by the black-box model for the case of interest since it has captured the slope in the local region around the prediction of interest.}
 \label{fig:limeconcept}
 \end{center}
 \end{figure}
 
-Figure \ref{fig:limeconcept} provides a visualization of this conceptual understanding of LIME. These figures show the predictions from a hypothetical black-box model plotted against the two features used to fit the black-box model. The orange point represent one prediction that is of interest to explain. The size of the points represent the proximity to the prediction of interest measured using the Gower distance metric \kg{(reference and add exponent value?)}. The black lines represent the explainer model which is a weighted linear regression model in this case fit with the black-box predictions as the response variable and Feature 1 and Feature 2 as the covariates in the model where the proximity values used as the weights in the model. The top image shows that there is a complex relationship between black-box predictions and Feature 1. Here the explainer model is plotted with Feature 2 set to be the observed value of Feature 2 for the prediction of interest. The explainer model does a good job of capturing the relationship in the local region around the prediction of interest. The bottom shows that there is no relationship between the black-box predictions and Feature 2 in either the global sense or local region around the prediction of interest. Here the explainer model is plotted with Feature 1 set to be the observed value of Feature 1 for the prediction of interest, and it has a slope of approximately 0. This explainer model would indicate that Feature 1 is driving the prediction made by the black-box model for the prediction of interest.
+\hh{I think it would make sense to combine figures 1 and 2 into one big, two-column spread figure with the two explainer models shown side by side. }
+\hh{Include a legend in the plot for the size of points. It would also be nice to change the points from black to something a bit lighter - maybe grey30? - and add a bit of alpha blending to them. That will allow you to still see the overall structure, but show the underlying 2d density somewhat. It also increases the contrast to the black lines of the explainer model. }
+Figure \ref{fig:limeconcept} provides a visualization of this conceptual understanding of LIME. These figures show the predictions from a hypothetical black-box model plotted against the two features used to fit the black-box model. The orange point \hh{It's better not to refer to colors in the text. Why don't you double encode with shape and refer to the shape of that special point. We do not know how color is going to be publicized and it's painful to find all the textual references.} represent one prediction that is of interest to explain. The size of the points represent the proximity to the prediction of interest measured using the Gower distance metric \kg{(reference and add exponent value?)} \hh{yes}. The black lines represent the  explainer model which in this case  is a weighted linear regression model fit with the black-box predictions as the response variable and Features 1 and 2 as the covariates in the model with proximity values used as  weights in the model. The top image shows that there is a complex relationship between black-box predictions and Feature 1. Here the explainer model is plotted with Feature 2 set to be the observed value of Feature 2 for the prediction of interest. The explainer model captures the relationship in the local region around the prediction of interest well. The bottom figure shows that there is no relationship between the black-box predictions and Feature 2 in either the global sense or in a local region around the prediction of interest. Here, the explainer model is plotted with Feature 1 set to be the observed value of Feature 1 for the prediction of interest, and it has a slope of approximately 0. Taken together, this explainer model would indicate that Feature 1 is driving the prediction made by the black-box model for the prediction of interest.
 
 \subsection{Motivation for Diagnosing LIME}
 
 At a conceptual level, explainer models add another level of complexity to predictive models: in trying to explain the black-box model, a simpler explainer model is added. To be able to trust in the explanation it is imperative to check that the explainer model is reliable and does not over-simplify the black-box model.
 
-The current implementations of LIME use a linear regression model as the explainer model (references to R and Python packages). These implementations are relying on the assumption that the relationship between the complex model predictions and the features is linear in a local region. It is important to assess this assumption in the local region of interest in order to trust the explanations produced by LIME. Additionally, the implementations offer various input settings, but little work has been done to provide advice on how to specify the settings in practice (look more into this). An assessment of the explanations could also help to determine which settings produce the explainer model with the best approximation of the complex model.
+The current implementations of LIME use a linear regression model as the explainer model \citep{lime} (references to R and Python packages) \hh{for which models? LIME uses neural networks for image analyses}. These implementations are relying on the assumption that the relationship between the complex model predictions and the features is linear in a local region. \hh{HH: be a bit careful in the phrasing here - we can always approximate any function using a linear form (think Taylor expansion). The question is how big the error is. } It is important to assess this assumption in the local region of interest in order to trust the explanations produced by LIME. \hh{The next sentence is muddying the waters - by being able to doagnose explainer models we will be able to assess the different settings offered in the implementations. Let's bring those up later. }
+Additionally, the implementations offer various input settings, but little work has been done to provide advice on how to specify the settings in practice (look more into this). An assessment of the explanations could also help to determine which settings produce the explainer model with the best approximation of the complex model.
 
 Figure \ref{fig:limebadapprox} provides an example where the explainer model is doing a poor job of approximating the complex model. The plots were created using the same data as Figure \ref{fig:limeconcept}, but the Gower distance metric was adjusted \kg{(add exponent value)}, so that observations further away from the prediction of interest are given larger weights. In this case, the explainer model is doing a poor job of capturing the relationship between the black-box predictions and the feature for both Feature 1 and Feature 2. However, the magnitude of the slope of the line in the bottom figure appears to be larger than . As a result, this explainer model would return an explanation that Feature 2 is driving the prediction made by the black-box model for the case of interest, which is not an accurate explanation.
 
@@ -104,7 +108,9 @@ Figure \ref{fig:limebadapprox} provides an example where the explainer model is 
 \end{center}
 \end{figure}
 
-In the scenario depicted in Figure \ref{fig:limeconcept}, the distance metric was adjusted until the explainer models produced a good local approximation of the complex model. For Figure \ref{fig:limebadapprox}, the default setting for distance measures was used by the LIME R package. Without these images, it would not be obvious that the explainer model used in Figure \ref{fig:limebadapprox} is a poor local approximation.
+In the scenario depicted in Figure \ref{fig:limeconcept}, the distance metric was adjusted until the explainer models produced a good local approximation of the complex model. \hh{HH: excellent! What are the respective R squares?} For Figure \ref{fig:limebadapprox}, the default setting for distance measures was used by the LIME R package. Without these images, it would not be obvious that the explainer model used in Figure \ref{fig:limebadapprox} is a poor local approximation.
+
+
 
 \subsection{Overview of Paper}
 
